--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"@notionhq/client": "^2.2.1"
 	}
 }
