--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"@notionhq/client": "^2.2.1"
+		"@notionhq/client": "^2.2.1",
+		"notion-to-md": "^2.5.5"
 	}
 }
