--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         mkdir ${{ github.event.repository.name }}
         cp main.js manifest.json styles.css README.md ${{ github.event.repository.name }}
+        cp -r images ${{ github.event.repository.name }}
         zip -r ${{ github.event.repository.name }}.zip ${{ github.event.repository.name }}
     # Create the release on github
     - name: Create Release
@@ -88,4 +89,15 @@ jobs:
         asset_path: ./styles.css
         asset_name: styles.css
         asset_content_type: text/css
+    # Upload the images
+    - name: Upload images
+      id: upload-images
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} 
+        asset_path: ./images/Notion-logo.svg
+        asset_name: images/Notion-logo.svg
+        asset_content_type: image/svg+xml
     # TODO: release notes???
