--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Package
       run: |
         mkdir ${{ github.event.repository.name }}
-        cp main.js manifest.json styles.css README.md images/Notion-logo.svg ${{ github.event.repository.name }}
+        cp main.js manifest.json styles.css README.md ${{ github.event.repository.name }}
         zip -r ${{ github.event.repository.name }}.zip ${{ github.event.repository.name }}
     # Create the release on github
     - name: Create Release
@@ -88,15 +88,4 @@ jobs:
         asset_path: ./styles.css
         asset_name: styles.css
         asset_content_type: text/css
-    # Upload the images
-    - name: Upload images
-      id: upload-images
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} 
-        asset_path: ./images/Notion-logo.svg
-        asset_name: Notion-logo.svg
-        asset_content_type: image/svg+xml
     # TODO: release notes???
